--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ form input {
   border: none;
   outline: none;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 21px;
   letter-spacing: 0.5px;
@@ -104,6 +104,7 @@ table {
   background-color: #16161d;
   width: 100%;
   table-layout: fixed;
+  font-size: 14px;
 }
 
 th {
@@ -111,6 +112,7 @@ th {
   padding: 10px;
   text-align: left;
   border: none;
+  font-weight: 600;
 }
 
 td {
@@ -159,7 +161,7 @@ td {
 
 .list-title h2 {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 16px;
   line-height: initial;
   margin-left: 6px;
 }
@@ -202,7 +204,7 @@ td {
   overflow: hidden;
   padding: 10px;
   font-weight: 400;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 200%;
   letter-spacing: 0.5px;
   color: #96999c;
