--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,19 @@ td {
   background-color: #0e0e12;
 }
 
+.token-img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.token-img img {
+  width: 100%;
+}
+
 .loader {
   display: flex;
   align-items: center;
