Add env support, Add gtm, Fix: lint & typecheck

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ body {
 .skeleton-loader.no-shimmer [data-loader-type='block']:after,
 .skeleton-loader.no-shimmer[data-loader-type='block']:after {
   mask: none;
-  animaiton: none;
+  animation: none;
 }
 
 @keyframes shimmer {
