make token holders work with aggrigation

--- a/src/Components/Input/input-styles.css
+++ b/src/Components/Input/input-styles.css
@@ -6,7 +6,7 @@
   width: 100%;
   color: transparent;
   overflow: hidden;
-  white-space: pre-wrap;
+  white-space: pre;
   overflow-wrap: break-word;
   border: none !important;
   text-align: start;
