--- a/src/Components/Input/input-styles.css
+++ b/src/Components/Input/input-styles.css
@@ -156,3 +156,10 @@
 .addressInput button {
   @apply py-0 px-3 rounded-none text-text-button font-bold;
 }
+@media (max-width: 500px) {
+  #suggestions-overlay {
+    left: 0px !important;
+    width: 100%;
+    max-width: 90vw;
+  }
+}
