--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,18 @@ body {
   content: '';
   @apply bg-text-secondary absolute -bottom-[5px] left-0 w-full h-[5px] rounded-18;
 }
+
+/* scroll-shadows */
+
+/* scroll-shadow-r: adds shadow to the right-end of horizonal scrollable content */
+
+.scroll-shadow-r {
+    position: relative;
+    overflow-x: auto;
+}
+
+.scroll-shadow-r::after {
+    content: '';
+    @apply absolute right-0 h-full w-[50px] bg-gradient-to-r from-transparent to-primary;
+}
+
