--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@ body {
   width: 100%;
 }
 
+.no-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+
 .glass-effect-button {
   background: linear-gradient(
     137deg,
@@ -153,6 +163,6 @@ body {
 
 .scroll-shadow-r::after {
     content: '';
-    @apply absolute right-0 top-0 h-full w-[100px] bg-gradient-to-r from-transparent to-primary pointer-events-none;
+    @apply absolute right-0 top-0 h-full w-16 bg-gradient-to-r from-transparent to-primary pointer-events-none;
 }
 
