--- a/src/pages/TokenBalances/SocialFollows/styles.css
+++ b/src/pages/TokenBalances/SocialFollows/styles.css
@@ -1,32 +1,56 @@
-.social-follow-table {
-    @apply w-auto text-xs table-fixed sm:w-full;
+.sf-table {
+  @apply w-auto text-xs table-fixed sm:w-full;
 }
 
-.social-follow-table thead {
-    @apply bg-glass rounded-2xl !backdrop-blur-none;
+.sf-table thead {
+  background: linear-gradient(
+    137deg,
+    rgba(255, 255, 255, 0.03) 0.55%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  @apply rounded-2xl;
 }
 
-.social-follow-table th {
-    @apply py-5 px-2 text-xs font-bold text-left whitespace-nowrap;
+.sf-table th {
+  @apply py-5 px-2 text-xs font-bold text-left whitespace-nowrap;
 }
 
-.social-follow-table :is(th, td):first-child {
-    @apply pl-9
+.sf-table :is(th, td):first-child {
+  @apply pl-9;
 }
 
-.social-follow-table :is(th, td):first-child {
-    @apply pr-9
+.sf-table :is(th, td):first-child {
+  @apply pr-9;
 }
 
-.social-follow-table td {
-    @apply py-3 px-2 h-[50px] align-middle ellipsis;
+.sf-table td {
+  @apply py-3 px-2 align-middle ellipsis;
 }
 
-.social-follow-table > tbody > tr:first-child > td {
-    @apply pt-5;
+.sf-table > tbody > tr:first-child > td {
+  @apply pt-5;
 }
 
-.social-follow-table > tbody > tr:last-child > td {
-    @apply pb-5;
+.sf-table > tbody > tr:last-child > td {
+  @apply pb-5;
 }
 
+.sf-mention-input .mentions {
+  @apply text-xs;
+}
+
+.sf-mention-input .mentions__suggestions__item {
+  @apply p-0;
+}
+
+.sf-mention-input .mentions__suggestions__item .text {
+  @apply text-xs;
+}
+
+.sf-mention-input .mentions__suggestions__item .type {
+  font-size: 10px;
+}
+
+.sf-mention-input #suggestions-overlay {
+  top: 10px !important;
+}
