--- a/src/Components/Input/styles.css
+++ b/src/Components/Input/styles.css
@@ -12,6 +12,7 @@
   text-align: start;
   overflow-y: auto;
 }
+
 .mentions__control,
 #mention-highlight {
   @apply h-full flex items-center;
@@ -33,10 +34,6 @@
   border-width: 17px 7px 12.5px 14px;
 }
 
-.mentions:focus-within {
-  /* @apply h-28; */
-}
-
 .mentions #mention-highlight + div {
   @apply invisible !absolute top-0;
 }
@@ -54,7 +51,7 @@
 }
 
 .mention {
-  @apply bg-stroke-highlight-blue;
+  @apply inline-block bg-stroke-highlight-blue;
 }
 
 .suggestion {
