code refactor, text changes

--- a/src/Components/Input/styles.css
+++ b/src/Components/Input/styles.css
@@ -173,3 +173,7 @@
 #frame-token-input-wrapper .mentions {
   @apply text-xs;
 }
+
+#frame-token-input-wrapper .mentions #mention-highlight #overlay-placeholder {
+  @apply !text-text-button font-medium;
+}
